force-app/main/default/objects/User_Tag__c/User_Tag__c.object-meta.xml
<CustomObject>
    <label>User Tag</label>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>UT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>