force-app/main/default/objects/User_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>User Tags</relationshipLabel>
    <relationshipName>User_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>