force-app/main/default/objects/User_Tag__c/fields/Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Tag_Type__c</fullName>
    <formula>Tag__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Type</label>
    <type>Text</type>
</CustomField>